# BindScore

./: BindScore.py  LICENSE  README.md  app.py  calibrate.py  classes.py  desktop_client.py  documentation.txt  fetchbrofetch.py  interactions.json  manifest.json  notebook.ipynb  pdbtime.py  popup.html  popup.js  pyproject.toml  requirements.txt  server.py
Notebooks/: BindScore_Project_Notebook.ipynb  Bindscore_Notebook.ipynb  logo_b64.txt
Web/: WebUtils.py
instance/: users.db
src/bindscore/: cif_treatment.py  cli.py  pdbtime.py
src/bindscore.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/bindscore/parsing/: enthalpy_run.py  header.py  pdb.py  pdb_utils_inter.py  pdb_utils_protein.py
src/bindscore/pdb_file_treatment/: pdb_utils.py  pdb_utils_fetch.py  protein_radius_estimation.py
src/bindscore/scoring/: __init__.py  backbone.py  conformational_entropy.py  entropy_utils.py  hydrophobic.py  hydrophobic_entropy.py  pdb_utils_enthalpy.py  protein-solvent entropy  protein_solvent_entropy  protein_solvent_entropy.py  sasa.py  sidechain.py  test_run.py  total_entropy.py  trans_rot.py  utils.py
src/bindscore/web/: app.py  utils.py
tests/: entropy_test.py  etnropy_test.py  example_inter.py  test_enthalpy.py
