[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bindscore"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "biopython",
    "numpy",
    "gemmi",
    "freesasa",
    "pymol-open-source",
    "pathlib",
    "openmm",
    "prody>=2.4",        # ← ADD: ANM/NMA for backbone.py
    "scipy>=1.10",       # ← ADD: stable symmetric matrix diagonalisation
]

[tool.hatch.build.targets.wheel]
packages = ["src/bindscore"]

[tool.pyright]
pythonVersion = "3.10"
extraPaths = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]