[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bindscore"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "biopython",
    "numpy",
    "gemmi",
    "freesasa",
    "streamlit", 
    "matplotlib",
    "py3Dmol", 
    "mols2grid",
    "ipython_genutils",
    "pymol-open-source",
    "pathlib",
    "openmm",
    "prody>=2.4",
    "scipy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bindscore"]

[tool.pyright]
pythonVersion = "3.10"
extraPaths = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]