[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bindscore"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "biopython",
    "numpy",
    "gemmi",
    "freesasa",
    "streamlit",
    "matplotlib",
    "py3Dmol",
    "mols2grid",
    "ipython_genutils",
    "pymol-open-source",
    "pathlib",
    "openmm",
    "prody>=2.4",
    "scipy>=1.10",
    "click>=8.0",
]

[project.scripts]
bindscore = "bindscore.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
pythonVersion = "3.10"
extraPaths = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]